deps/v8/test/message/fail/class-private-static-count-setter-only.out
*%(basename)s:7: TypeError: Receiver must be class A
  static test() { return this.#a++; }
                              ^
TypeError: Receiver must be class A
    at Object.test (*%(basename)s:7:31)
    at *%(basename)s:10:8
